fixed page overflow footer

--- a/include/style.css
+++ b/include/style.css
@@ -247,3 +247,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 .text-danger {
     color: red;
 }
+
+.position-static {
+    position: static;
+}
